--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
 .env
 Pipfile
 Pipfile.lock
+
+# Informes generados
+informes/
+informes/*.json
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
