--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,10 @@ WEATHERCLOUD_DEVICEID=YOUR_STATION_ID
 # Si no se especifica, la aplicación generará una aleatoria automáticamente
 SECRET_KEY=your_secret_key_here_generate_random_in_production
 
+# ===== Application Settings =====
+# Puerto en el que se ejecutará la aplicación Flask
+PORT=5000
+
 # ====================================
 # INSTRUCCIONES:
 # 1. Copia este archivo y renómbralo a .env
